--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,20 @@
 plugins {
-    id 'java-library'
+    id 'java'
+    id 'io.qameta.allure' version '2.11.2'
+}
+
+allure {
+    report {
+        version.set("2.22.2")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.22.2") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
 }
 
 repositories {
@@ -8,8 +23,10 @@ repositories {
 
 dependencies {
     testImplementation(
-            'com.codeborne:selenide:6.14.0',
+            'com.codeborne:selenide:6.7.2',
             'org.junit.jupiter:junit-jupiter:5.9.3',
+            'io.qameta.allure:allure-selenide:2.22.2',
+            'io.github.bonigarcia:webdrivermanager:5.3.3',
             'org.slf4j:slf4j-simple:2.0.5')
 }
 
